# steam-inventory-checker

./: .gitignore  LICENSE  config.toml.example  pyproject.toml
app/: __main__.py
app/cli/: dispatcher.py  display.py  shell.py
app/cli/commands/: account.py  db_cmds.py  meta.py  search.py  sync_cmds.py
app/core/: config.py  context.py  database.py  filelock.py  indexes.py  logger.py  models.py
app/filters/: aliases.py  criteria.py  engine.py  parser.py
app/pricing/: fetcher.py
app/proxy/: circuit_breaker.py  health.py  manager.py  stats.py
app/steam/: client.py  exceptions.py  inventory.py  normalizer.py  profile_xml.py
app/sync/: orchestrator.py  queue.py  result.py  worker.py
